// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasToken returns canonical protocol contract 1`] = `
{
  "address": AztecAddress {
    "asBigInt": 904490780781460528224376188338116591313205995238981621267723393880425033858n,
    "asBuffer": {
      "data": [
        1,
        255,
        236,
        115,
        172,
        83,
        86,
        40,
        249,
        128,
        136,
        183,
        15,
        118,
        111,
        71,
        152,
        152,
        1,
        160,
        223,
        199,
        84,
        207,
        73,
        150,
        245,
        5,
        207,
        216,
        240,
        130,
      ],
      "type": "Buffer",
    },
  },
  "instance": {
    "address": AztecAddress {
      "asBigInt": 904490780781460528224376188338116591313205995238981621267723393880425033858n,
      "asBuffer": {
        "data": [
          1,
          255,
          236,
          115,
          172,
          83,
          86,
          40,
          249,
          128,
          136,
          183,
          15,
          118,
          111,
          71,
          152,
          152,
          1,
          160,
          223,
          199,
          84,
          207,
          73,
          150,
          245,
          5,
          207,
          216,
          240,
          130,
        ],
        "type": "Buffer",
      },
    },
    "contractClassId": Fr {
      "asBigInt": 19991854230050936342500655152798276890654480361721079564566765643052229542968n,
      "asBuffer": {
        "data": [
          44,
          50,
          253,
          14,
          188,
          205,
          162,
          226,
          0,
          87,
          243,
          127,
          162,
          230,
          8,
          92,
          7,
          217,
          161,
          35,
          106,
          114,
          165,
          79,
          88,
          199,
          36,
          65,
          143,
          123,
          68,
          56,
        ],
        "type": "Buffer",
      },
    },
    "initializationHash": Fr {
      "asBigInt": 5411687428194306823799197943510367074755080310726877398642044502900791103391n,
      "asBuffer": {
        "data": [
          11,
          246,
          232,
          18,
          241,
          75,
          176,
          41,
          247,
          203,
          156,
          141,
          168,
          54,
          125,
          217,
          124,
          6,
          142,
          120,
          141,
          79,
          33,
          0,
          127,
          217,
          112,
          20,
          235,
          168,
          207,
          159,
        ],
        "type": "Buffer",
      },
    },
    "portalContractAddress": EthAddress {
      "buffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "type": "Buffer",
      },
    },
    "publicKeysHash": Fr {
      "asBigInt": 17954372136461894568820199868962143715279932924957662285438325406238856880109n,
      "asBuffer": {
        "data": [
          39,
          177,
          208,
          131,
          154,
          91,
          35,
          186,
          241,
          42,
          141,
          25,
          91,
          24,
          172,
          40,
          143,
          207,
          64,
          26,
          251,
          47,
          112,
          184,
          164,
          181,
          41,
          237,
          229,
          250,
          159,
          237,
        ],
        "type": "Buffer",
      },
    },
    "salt": Fr {
      "asBigInt": 1n,
      "asBuffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "type": "Buffer",
      },
    },
    "version": 1,
  },
}
`;

exports[`GasToken returns canonical protocol contract 2`] = `
{
  "artifactHash": Fr {
    "asBigInt": 3363571886208995000060653132822906490593381833217164785427349714321114865759n,
    "asBuffer": {
      "data": [
        7,
        111,
        182,
        215,
        73,
        59,
        7,
        90,
        136,
        14,
        238,
        217,
        15,
        236,
        124,
        76,
        1,
        224,
        162,
        77,
        68,
        37,
        34,
        68,
        158,
        77,
        86,
        194,
        99,
        87,
        32,
        95,
      ],
      "type": "Buffer",
    },
  },
  "id": Fr {
    "asBigInt": 19991854230050936342500655152798276890654480361721079564566765643052229542968n,
    "asBuffer": {
      "data": [
        44,
        50,
        253,
        14,
        188,
        205,
        162,
        226,
        0,
        87,
        243,
        127,
        162,
        230,
        8,
        92,
        7,
        217,
        161,
        35,
        106,
        114,
        165,
        79,
        88,
        199,
        36,
        65,
        143,
        123,
        68,
        56,
      ],
      "type": "Buffer",
    },
  },
  "privateFunctions": [
    {
      "isInternal": false,
      "selector": FunctionSelector {
        "value": 2432309179,
      },
      "vkHash": Fr {
        "asBigInt": 0n,
        "asBuffer": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
          "type": "Buffer",
        },
      },
    },
  ],
  "privateFunctionsRoot": Fr {
    "asBigInt": 8909521279374546913798331365196924937704969493731099782202223186665436350504n,
    "asBuffer": {
      "data": [
        19,
        178,
        156,
        63,
        74,
        150,
        235,
        20,
        213,
        211,
        83,
        154,
        99,
        8,
        255,
        151,
        54,
        173,
        93,
        103,
        227,
        246,
        31,
        251,
        183,
        218,
        144,
        142,
        20,
        152,
        8,
        40,
      ],
      "type": "Buffer",
    },
  },
  "publicBytecodeCommitment": Fr {
    "asBigInt": 12831037323980616574351244666328101205920009085730841227364130135390586685732n,
    "asBuffer": {
      "data": [
        28,
        94,
        28,
        25,
        158,
        58,
        255,
        173,
        143,
        61,
        62,
        199,
        219,
        62,
        59,
        64,
        99,
        155,
        60,
        14,
        248,
        35,
        81,
        80,
        108,
        235,
        37,
        205,
        227,
        176,
        73,
        36,
      ],
      "type": "Buffer",
    },
  },
  "version": 1,
}
`;

exports[`GasToken returns canonical protocol contract 3`] = `
[
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 190347739,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 1776307709,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 1811750235,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 3422298534,
    },
  },
]
`;
